--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "figur-api",
+  "name": "tiwiflix",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
-  "engines": {
-    "node": "18.x || 20.x"
-  },
+  "license": "MIT",
+    "engines": {
+      "node": "18.x || 20.x"
+    },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -24,7 +24,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@googlemaps/google-maps-services-js": "^3.3.32",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
@@ -35,25 +34,18 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^10.0.2",
     "@nestjs/schedule": "^2.2.0",
     "@nestjs/throttler": "^4.0.0",
-    "@nestjs/websockets": "^9.4.3",
     "@sendgrid/mail": "^7.7.0",
-    "@types/bcrypt": "^5.0.0",
     "@types/csurf": "^1.11.2",
     "aws-sdk": "^2.1382.0",
     "axios": "^1.4.0",
-    "bcrypt": "^5.0.1",
-    "braintree": "^3.17.0",
-    "cache-manager": "4.0.0",
-    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "csurf": "^1.11.0",
-    "dotenv": "^16.0.2",
-    "firebase-admin": "^11.5.0",
-    "helmet": "^6.0.0",
+    "dotenv": "^16.0.3",
+    "helmet": "^6.0.1",
+    "inquirer": "^9.2.12",
     "js-sha512": "^0.8.0",
     "moment": "^2.29.4",
     "mongoose": "^6.6.0",
@@ -62,25 +54,21 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "paypal-rest-sdk": "^1.8.1",
-    "paystack": "^2.0.1",
-    "puppeteer": "^19.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sib-api-v3-sdk": "^8.4.2",
-    "socket.io": "^4.6.2"
+    "bcrypt": "^5.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/cache-manager": "^4.0.2",
-    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
+    "@types/node": "18.11.18",
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -99,6 +87,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
